Add styling to results container, flexbox and centered items

--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,9 @@
     margin-top: 50px;
 }
 
+#scoresContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
